# ModbusAppControler

./: CMakeLists.txt  README.md  main.cpp  main.qml  qml.qrc
data/: RegisterDefs.js  SerialPortDefs.js  UiConfig.js
dialogs/: ConnectionDialog.qml
logic/: AppController.qml  BackendClient.qml  RegisterModel.qml
sections/: PingSection.qml  SectionBase.qml
